--- a/VCellId_v1/src/vcellid_v1/VCellId_v1View.form
+++ b/VCellId_v1/src/vcellid_v1/VCellId_v1View.form
@@ -59,6 +59,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="jButton2">
               <Properties>
+                <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
+                  <action class="vcellid_v1.VCellId_v1View" id="showImageSetup" methodName="showImageSetup"/>
+                </Property>
                 <Property name="text" type="java.lang.String" resourceKey="jButton2.text"/>
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="horizontalTextPosition" type="int" value="0"/>
@@ -68,6 +71,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="jButton3">
               <Properties>
+                <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
+                  <action class="vcellid_v1.VCellId_v1View" id="showSegmentationSetup" methodName="showSegmentationSetup"/>
+                </Property>
                 <Property name="text" type="java.lang.String" resourceKey="jButton3.text"/>
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="horizontalTextPosition" type="int" value="0"/>
@@ -102,7 +108,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="14" max="32767" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="395" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -144,11 +150,11 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="487" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="517" max="32767" attributes="0"/>
                   <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                          <Component id="appTitleLabel" pref="452" max="32767" attributes="0"/>
+                          <Component id="appTitleLabel" pref="490" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -156,11 +162,11 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="435" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="421" max="32767" attributes="0"/>
                   <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                          <Component id="appTitleLabel" pref="404" max="32767" attributes="0"/>
+                          <Component id="appTitleLabel" pref="398" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -245,12 +251,21 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="imagesSetupMenuItem">
               <Properties>
+                <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
+                  <action class="vcellid_v1.VCellId_v1View" id="showImageSetup" methodName="showImageSetup"/>
+                </Property>
                 <Property name="text" type="java.lang.String" resourceKey="imagesSetupMenuItem.text"/>
                 <Property name="name" type="java.lang.String" value="imagesSetupMenuItem" noResource="true"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="imagesSetupMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="segmentationMenuItem">
               <Properties>
+                <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
+                  <action class="vcellid_v1.VCellId_v1View" id="showSegmentationSetup" methodName="showSegmentationSetup"/>
+                </Property>
                 <Property name="text" type="java.lang.String" resourceKey="segmentationMenuItem.text"/>
                 <Property name="name" type="java.lang.String" value="segmentationMenuItem" noResource="true"/>
               </Properties>
