--- a/VCellId_v1/src/vcellid_v1/VCellId_v1View.form
+++ b/VCellId_v1/src/vcellid_v1/VCellId_v1View.form
@@ -50,6 +50,9 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="jButton1">
               <Properties>
+                <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
+                  <action class="vcellid_v1.VCellId_v1View" id="showLoadImages" methodName="showLoadImages"/>
+                </Property>
                 <Property name="text" type="java.lang.String" resourceKey="jButton1.text"/>
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="horizontalTextPosition" type="int" value="0"/>
@@ -108,7 +111,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="14" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="395" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -150,11 +153,11 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="517" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="487" max="32767" attributes="0"/>
                   <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                          <Component id="appTitleLabel" pref="490" max="32767" attributes="0"/>
+                          <Component id="appTitleLabel" pref="452" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -162,11 +165,11 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="421" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="435" max="32767" attributes="0"/>
                   <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                          <Component id="appTitleLabel" pref="398" max="32767" attributes="0"/>
+                          <Component id="appTitleLabel" pref="404" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -244,6 +247,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="loadImageMenuItem">
               <Properties>
+                <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
+                  <action class="vcellid_v1.VCellId_v1View" id="showLoadImages" methodName="showLoadImages"/>
+                </Property>
                 <Property name="text" type="java.lang.String" resourceKey="loadImageMenuItem.text"/>
                 <Property name="actionCommand" type="java.lang.String" resourceKey="loadImageMenuItem.actionCommand"/>
                 <Property name="name" type="java.lang.String" value="loadImageMenuItem" noResource="true"/>
